--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@geoman-io/leaflet-geoman-free": "^2.19.0",
+    "@turf/boolean-point-in-polygon": "^7.3.3",
+    "axios": "^1.6.5",
+    "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
+    "leaflet.heat": "^0.2.0",
+    "leaflet.markercluster": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "leaflet": "^1.9.4",
     "react-leaflet": "^4.2.1",
-    "leaflet.markercluster": "^1.5.3",
     "react-leaflet-markercluster": "^3.0.0-rc1",
-    "leaflet-draw": "^1.0.4",
-    "recharts": "^2.10.3",
-    "axios": "^1.6.5"
+    "recharts": "^2.10.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.48",
